# JianFlow

./: .gitignore  AGENTS.md  DEVELOPMENT.md  GIT-WORKFLOW.md  README.md  SPEC-v0.1.1.md  todo.html
todo-desktop/: electron-builder.yml  main.js  package-lock.json  package.json  preload.js
todo-desktop-v0.2/: DEVELOPMENT_PLAN.md  index.html  package-lock.json  package.json  交接报告.md
todo-desktop-v0.2/docs/: project-knowledge.md
todo-desktop-v0.2/src/: main.ts
todo-desktop-v0.2/src-tauri/: Cargo.toml  tauri.conf.json
todo-desktop-v0.2/src-tauri/capabilities/: default.json
todo-desktop-v0.2/src-tauri/src/: activity.rs  ai_agent.rs  ai_memory.rs  ai_ollama.rs  ai_router.rs  ai_scheduler.rs  ai_service.rs  commands.rs  database.rs  learning.rs  lib.rs  mcp.rs  models.rs  reminder.rs
todo-desktop-v0.2/src-tauri/src/skills/: board.rs  data_context.rs  evening.rs  init.rs  mod.rs  morning.rs  orchestrator.rs  report.rs  tools.rs
todo-desktop-v0.2/src/js/: api.ts  router.ts  store.ts  utils.ts
todo-desktop-v0.2/src/js/chat/: chat-form.ts  chat-message.ts  chat-skill.ts
todo-desktop-v0.2/src/js/components/: chat-panel.ts  toast.ts  tool-inspector.ts  (+1 more)
todo-desktop-v0.2/src/styles/: components.css  dark.css  pages.css  tokens.css
todo-desktop/renderer/: index.html  pomodoro-mini.html  pomodoro-window.html
todo-desktop/renderer/css/: main.css  pomodoro.css  themes.css  timetable.css
todo-desktop/renderer/js/: app.js  calendar.js  countdown.js  daily-log.js  pomodoro.js  settings.js  stats.js  timetable.js  todos.js  utils.js
todo-desktop/src/: database.js
todo-desktop_v0.1/: index.html  package-lock.json  package.json
todo-desktop_v0.1/src/: main.ts
todo-desktop_v0.1/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
todo-desktop_v0.1/src-tauri/icons/: icon.icns
todo-desktop_v0.1/src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models.rs
todo-desktop_v0.1/src/js/: api.ts  history.ts  icons.ts  utils.ts
todo-desktop_v0.1/src/styles/: base.css  components.css  pages.css
(+12 files in other folders)
